# mastodon-ghs-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  jav_spider.py  mastdon_robot.py  mastodon_robot.py  migrate_resman.py  pyproject.toml  repaire.py  requirements.txt  spider.py  xart_spider.py
.github/workflows/: env-image.yml
ghs/channels/: base.py  jav.py  sex8.py  xart.py
ghs/spiders/: base.py  jav.py  sex8.py  xart.py
ghs/spiders/repairer/: sex8_repairer.py
ghs/utils/: __init__.py  storage.py
