[tool.poetry]
name = "ghs-mastodon-bot"
version = "0.1.0"
description = ""
authors = ["Tsing Jyujing"]

[tool.poetry.dependencies]
python = "^3.7"
tsingspider = "^1.4.3"
m3u8 = "^0.7.1"
Pillow = "^8.0.1"
pymongo = "^3.11.0"
pycryptodomex = "^3.9.8"
"Mastodon.py" = "^1.5.1"
minio = "^6.0.0"
bencodepy = "^0.9.5"
celery = "^5.0.1"
numpy = "^1.19.3"
click = "^7.1.2"
tqdm = "^4.51.0"
ffmpeg-python = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
